# BackendService

./: deploy.Dockerfile  deploy.sh  manage.py  pyproject.toml
JunctionBackend/: asgi.py  settings.py  urls.py  wsgi.py
cores/: apis.py  enums.py  exceptions.py  urls.py  utils.py
lands/: apps.py  models.py  schemas.py  urls.py  views.py
lands/migrations/: 0001_initial.py  0002_rename_title_land_name.py  0003_rename_like_landinfomapping_like_count_and_more.py  0004_landinfousermapping.py  0005_rename_is_event_landinfousermapping_is_like_event.py  0006_rename_title_info_name.py
users/: enums.py  models.py  schemas.py  views.py
users/migrations/: 0001_initial.py
